--- a/config/linkbook.yaml
+++ b/config/linkbook.yaml
@@ -1,2 +1,8 @@
-server.port: 9999
-server.host: localhost
+server:
+  host: localhost
+  port: 9999
+
+templatesPaths: 
+  - "web/views/*.html"
+  - "web/views/partials/*.html"
+
